# nih-plug-devsuite

./: Cargo.toml
resps/: resp.md  resp1.md  resp2.md  resp3.md  resp4.md
src/: app.rs  audio_engine.rs  build_system.rs  main.rs  midi_engine.rs  project.rs  scaffolding.rs
src/plugin_host/: audio.rs  gui.rs  handlers.rs  loader.rs  midi_bridge.rs  mod.rs  timer.rs
src/plugin_host/gui_window/: mod.rs  win32.rs  x11.rs
src/templates/: cargo_toml.txt  editor_rs.txt  lib_rs.txt  mod.rs  params_rs.txt
src/ui/: build_panel.rs  code_editor.rs  file_browser.rs  midi_panel.rs  mod.rs  new_project_dialog.rs  plugin_panel.rs  settings_panel.rs  top_bar.rs
