[package]
name = "nih-plug-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.33", features = ["default"] }
egui_code_editor = "0.2.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
dirs = "5"
cpal = "0.15"
midir = "0.10"
crossbeam-channel = "0.5"
rtrb = "0.3"
wmidi = "4.0.6"
# raw-window-handle = "0.6.2"
# winit = { version = "0.30", features = ["x11"] }
# x11rb = { version = "0.13", features = ["allow-unsafe-code"] }

clack-host = { git = "https://github.com/prokopyl/clack", features = ["default"] }
clack-extensions = { git = "https://github.com/prokopyl/clack", features = [
    "clack-host",
    "audio-ports",
    "note-ports",
    "raw-window-handle_06",
    "gui",
    "log",
    "params",
    "timer",
] }

[target.'cfg(target_os = "linux")'.dependencies]
# x11rb for creating the native plugin-host window.
x11rb = { version = "0.13", features = ["allow-unsafe-code"] }
# winit is only needed directly for the EventLoopBuilderExtX11 trait so we
# can force X11 over Wayland (CLAP embedding requires X11 reparenting).
# Must match the winit version eframe pulls in — if you see a "trait not
# implemented" error on `builder.with_x11()`, check `cargo tree -i winit`.
winit = { version = "0.30", features = ["x11"], default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
] }
